Fix YAML formatting

--- a/property-validation-config.yaml
+++ b/property-validation-config.yaml
@@ -13,7 +13,7 @@ validation_rules:
       - "BU1"
       - "BU2"
       - "BU3"
-      - "Engie""
+      - "Engie"
     
   
   # Add more properties as needed
