Add required permissions

--- a/.github/workflows/validate-properties-local.yml
+++ b/.github/workflows/validate-properties-local.yml
@@ -8,6 +8,10 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: read
+  checks: write
+
 jobs:
   validate-properties-spectral:
     runs-on: ubuntu-latest
