--- a/.github/workflows/validate-properties-local.yml
+++ b/.github/workflows/validate-properties-local.yml
@@ -68,8 +68,16 @@ jobs:
       #     print_logs: true
       #     github_token: ${{ secrets.GITHUB_TOKEN }}   
 
-      - name: Validate API properties with Spectral
-        uses: stoplightio/spectral-action@latest
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
-          file_glob: '${{ steps.extract-api.outputs.api_yaml_path }}'
-          spectral_ruleset: 'wso2-rulesets/rules/propertiesValidation.yml'
+          node-version: '18'
+
+      - name: Install Spectral CLI
+        run: npm install -g @stoplight/spectral-cli
+
+      - name: Validate API properties with Spectral CLI
+        run: |
+          spectral lint '${{ steps.extract-api.outputs.api_yaml_path }}' \
+            --ruleset 'wso2-rulesets/rules/propertiesValidation.yml' \
+            --format github-actions
