--- a/.github/workflows/apim-build-n-release-api.yml
+++ b/.github/workflows/apim-build-n-release-api.yml
@@ -42,6 +42,12 @@ jobs:
     uses: isamauny-wso2/wso2-workflows/.github/workflows/validate-properties-spectral.yml@main
     with:
       zip_path: ${{ needs.print_changed_files.outputs.changed_file }}
+  validate_openapi:
+    name: Validate OpenAPI Compliance
+    needs: print_changed_files
+    uses: isamauny-wso2/wso2-workflows/.github/workflows/validate-compliance-apictl.yml@main
+    with:
+      zip_path: ${{ needs.print_changed_files.outputs.changed_file }}
   release_repo:
     name: Release Repo
     needs: [ print_changed_files, validate_props ] 
