revert change to branch restrictions!

--- a/.github/workflows/apim-build-n-release-api.yml
+++ b/.github/workflows/apim-build-n-release-api.yml
@@ -2,6 +2,9 @@ on:
   push:
     paths:
       - apim/**/Artifact/*.zip
+    branches:
+      - main
+
   workflow_dispatch:
 
 name: Build and Release API Repo
